# Investment

./: .gitignore  README.md  investment.py  investment_cli.py  investment_engine.py  investment_persist.py  investment_reporting.py  parsing.py  pyproject.toml  requirements.txt  schemas.py  storage.py
Schema/: README.md  __init__.py  projection_types.py  scenario_types.py
Schema/json/: investment_scenario.schema.json  persisted_scenarios_v2.schema.json  projection_result.schema.json
tests/: test_cli.py  test_investment.py  test_parsing.py  test_storage.py
