[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ll-investment"
version = "0.1.0"
description = "Compound interest projector CLI (standalone)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0", "mypy>=1.8"]

[project.scripts]
ll-investment = "investment:main"

[tool.setuptools]
py-modules = [
    "investment",
    "investment_cli",
    "investment_engine",
    "investment_persist",
    "investment_reporting",
    "schemas",
    "storage",
    "parsing",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
explicit_package_bases = true
files = [
    "investment.py",
    "investment_cli.py",
    "investment_engine.py",
    "investment_persist.py",
    "investment_reporting.py",
    "schemas.py",
    "storage.py",
    "parsing.py",
]
